# financeadviser

./: .gitignore  CLAUDE.md  env.example  pyproject.toml
.claude/commands/: audit.md
app/: config.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: agent.py  data.py  search.py
app/core/: logging.py  vector_store.py
app/services/: agent.py  anthropic_agent.py  loader.py  retriever.py
data/: loader.py
data/prompts/v1/: prompt.py
data/samples/: recommendation_sample.MD  summary_sample.MD
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/pages/: AnalyzePage.tsx  SearchPage.tsx  UploadPage.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  MarkdownRenderer.tsx  Spinner.tsx
frontend/src/types/: api.ts
tests/: response_chance.json
tests/test_api/: test_data.py
tests/test_services/: test_loader.py
