[tool.poetry]
name = "financeadviser"
packages = [{include = "app"}]
version = "0.1.0"
description = "Production-ready Application for Financial Advising using FastAPI and LangChain Agents"
authors = ["Alena Salanevich <Alena_Salanevich@epam.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/langchain-agent-app"
repository = "https://github.com/yourusername/langchain-agent-app"
keywords = ["fastapi", "langchain", "agents", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
# Web Framework
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.28.0" }
python-multipart = "^0.0.9"

json-delta = "^2.0.2"

# Pydantic & Settings
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
email-validator = "^2.1.1"

# Database
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"

# Security
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "^4.1.2"

# LangChain & AI
langchain = "^0.1.16"
langchain-openai = "^0.1.1"
langchain-core = "^0.1.42"
langchain-community = "^0.0.32"
#langchain-experimental = "^0.0.47"
langgraph = "^0.0.40"
openai = "^1.14.0"

# HTTP & API
httpx = "^0.27.0"
requests = "^2.31.0"

# Caching & Queue
redis = "^5.0.3"
celery = "^5.3.6"

# Utilities
python-dotenv = "^1.0.1"
tenacity = "^8.2.3"

# Monitoring
prometheus-fastapi-instrumentator = "^7.0.0"
sentry-sdk = { extras = ["fastapi"], version = "^1.44.1" }
pypdf = "^6.7.3"
sentence-transformers = "^5.2.3"
faiss-cpu = {version = "^1.13.2", python = ">=3.12,<3.15"}
pgvector = "^0.3.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.3"
httpx = "^0.27.0"

# Code Quality
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pylint = "^3.1.0"
mypy = "^1.9.0"
bandit = "^1.7.8"

# Type Stubs
types-requests = "^2.31.0.20240311"
types-redis = "^4.6.0.20240311"

# Pre-commit
pre-commit = "^3.7.0"

# Documentation
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.15"

# Development Tools
ipython = "^8.22.2"
ipdb = "^0.13.13"

[tool.poetry.scripts]
start = "app.main:main"
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
env = [
    "ENVIRONMENT=test",
    "DATABASE_URL=sqlite:///./test.db",
    "SECRET_KEY=test-secret-key-for-testing-only",
    "OPENAI_API_KEY=sk-test-key",
]

# Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# MyPy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "celery.*",
]
ignore_missing_imports = true

# Pylint configuration
[tool.pylint.messages_control]
disable = [
    "C0111", # missing-docstring
    "C0103", # invalid-name
    "R0903", # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 88